
2003-04-02  Saito <timidity@flashmail.com>
	* timidity/effect.c, timidity/mt19937ar.[ch]:
	  Improve noise shaping filter for 16bit output mode.

2003-04-01  Saito <timidity@flashmail.com>
	* interface/w32g_res.rc, timidity/effect.c:
	  Implement noise shaping filter for 16bit output mode.
	* timidity/playmidi.c:
	  Fix polyphonic key pressure.

2003-03-31  Saito <timidity@flashmail.com>
	* interface/w32g_subwin3.c:
	  Fix tracer window (W32GUI version)
	* timidity/playmidi.[ch]:
	  Fix NRPN vibrato control.
	* timidity/mix.c:
	  Fix up tremolo.

2003-03-31  TAMUKI Shoichi <tamuki@linet.gr.jp>
	* interface/ncurs_c.c: Fix around temperament control SysEx.

2003-03-30  Saito <timidity@flashmail.com>
	* interface/w32g_res.rc:
	  Fix tab order (W32GUI version)
	  # thanks to Mr.rc

2003-03-28  Saito <timidity@flashmail.com>
	* timidity/mix.c:
	  Fix aborting in do_voice_filter() function.
	* timidity/playmidi.c:
	  Fix around voice-by-voice LPF.

2003-03-28  Daisuke Aoki <dai@sweetparty.ne.jp>
	* interface/w32g_i.c, timidity/readmidi.c:
	  Enhance support for .rmi files.

2003-03-27  Kentaro Sato <kentaro@ps.catv.ne.jp>
	* timidity/playmidi.c:
	  Fix behaviour of user drumset.

2003-03-27  Saito <timidity@flashmail.com>
	* timidity/playmidi.[ch], timidity/readmidi.c:
	  Improve legato.
	  Improve NRPN cutoff control.
	* interface/w32g_subwin3.c:
	  Fix tracer window (W32GUI version)

2003-03-27  TAMUKI Shoichi <tamuki@linet.gr.jp>
	* timidity/playmidi.c, timidity/readmidi.c:
	  Fix temperament control with universal SysEx.

2003-03-27  Daisuke Aoki <dai@sweetparty.ne.jp>
	* interface/w32g_subwin3.c:
	  Fasten tracer window (W32GUI version)

2003-03-26  Saito <timidity@flashmail.com>
	* interface/w32g_subwin3.c:
	  Fasten tracer window (W32GUI version)

2003-03-26  TAMUKI Shoichi <tamuki@linet.gr.jp>
	* interface/alsaseq_c.c, interface/ncurs_c.c, interface/winsyn_c.c,
	  timidity/controls.h, timidity/playmidi.[ch], timidity/readmidi.c,