@@ -1077,6 +1077,26 @@ FLOAT_T sc_pan_table[128] =
     126.340537, 126.660367, 126.953278, 127.218870, 127.456741, 127.666489, 127.847710, 128.000000, 
 };
 
+FLOAT_T sc_drum_level_table[128] = 
+{
+    0.127383666, 0.116306851, 0.116306851, 0.121845239, 0.121845239, 0.177229492, 0.276921082, 0.371073966,
+    0.509534666, 0.63137918, 0.786454384, 0.96368454, 1.140914577, 1.340297626, 1.550752378, 1.772294922,
+    2.027063554, 2.276305392, 2.553221722, 2.852295409, 3.156884915, 3.483693253, 3.832555488, 4.192552036,
+    4.574701923, 4.940329386, 5.333499868, 5.765574864, 6.192057047, 6.640674741, 7.122287194, 7.593113259,
+    8.080635825, 8.595794061, 9.144102383, 9.664660773, 10.24633017, 10.81672428, 11.38681139, 11.99094813,
+    12.62227013, 13.25854763, 13.9067433, 14.58280434, 15.24682853, 15.93913578, 16.67582468, 17.40677153,
+    18.16646647, 18.93603923, 19.70499457, 20.5135074, 21.30582296, 22.13747255, 22.96090587, 23.81041721,
+    24.70164693, 25.58260502, 26.49000146, 27.40607067, 28.31689811, 29.24786463, 30.23205064, 31.21482628,
+    32.20067424, 33.23255814, 34.25500189, 35.29424349, 36.39851584, 37.45779154, 38.53960501, 39.65108149,
+    40.76437556, 41.96138728, 43.087132, 44.27494511, 45.47306439, 46.72579815, 47.97330161, 49.2090564,
+    50.45398944, 51.73403649, 52.98773723, 54.28746635, 55.65256056, 56.94477565, 58.33590485, 59.65910585,
+    61.02320108, 62.42965256, 63.85749472, 65.23472322, 66.69717016, 68.12424925, 69.61373226, 71.08617313,
+    72.5932, 74.13521242, 75.64943727, 77.16113946, 78.76866319, 80.33776007, 81.97064137, 83.55570902,
+    85.20328638, 86.83397129, 88.52829268, 90.15548932, 91.89012658, 93.64447884, 95.36678928, 97.10165864,
+    98.84694989, 100.7119867, 102.474873, 104.3005747, 106.0064252, 107.8971463, 109.7237001, 111.6131611,
+    113.426875, 115.373808, 117.2370801, 119.1615233, 121.1502003, 123.1227951, 125.0744314, 127.0000000
+};
+
 FLOAT_T attack_vol_table[1024];
 
 void init_attack_vol_table(void)
